--- a/VisualizationUI/src/org/mongkie/ui/visualization/options/EdgeSettingPanel.form
+++ b/VisualizationUI/src/org/mongkie/ui/visualization/options/EdgeSettingPanel.form
@@ -16,18 +16,9 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="fontLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="fontButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="fontColorButton" min="-2" pref="24" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="hideLabelCheckBox" min="-2" max="-2" attributes="0"/>
-                  </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lineLabel" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -35,27 +26,35 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="arrowChooser" min="-2" pref="141" max="-2" attributes="0"/>
+                          <Component id="arrowChooser" alignment="0" min="-2" pref="141" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="fontButton" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="fontColorButton" min="-2" pref="24" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="hideLabelCheckBox" min="-2" max="-2" attributes="0"/>
+                          </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lineChooser" min="-2" pref="141" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="widthLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="sizeSpinner" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="colorLabel" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="colorButton" min="-2" pref="24" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="colorButton" min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="resetAllButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="presetsButton" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="fontLabel" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="36" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -64,12 +63,12 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
-                  <Component id="colorButton" alignment="2" min="-2" pref="24" max="-2" attributes="0"/>
-                  <Component id="colorLabel" alignment="2" min="-2" max="-2" attributes="0"/>
-                  <Component id="sizeSpinner" alignment="2" min="-2" max="-2" attributes="0"/>
-                  <Component id="widthLabel" alignment="2" min="-2" max="-2" attributes="0"/>
-                  <Component id="lineChooser" alignment="2" min="-2" max="-2" attributes="0"/>
                   <Component id="lineLabel" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="lineChooser" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="widthLabel" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="sizeSpinner" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="colorLabel" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="colorButton" alignment="2" min="-2" pref="24" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
@@ -78,15 +77,15 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
-                  <Component id="hideLabelCheckBox" alignment="2" min="-2" max="-2" attributes="0"/>
-                  <Component id="fontColorButton" alignment="2" min="-2" pref="24" max="-2" attributes="0"/>
                   <Component id="fontButton" alignment="2" min="-2" max="-2" attributes="0"/>
                   <Component id="fontLabel" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="fontColorButton" alignment="2" min="-2" pref="24" max="-2" attributes="0"/>
+                  <Component id="hideLabelCheckBox" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="resetAllButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="presetsButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="2" attributes="0">
+                  <Component id="presetsButton" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="resetAllButton" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -103,11 +102,6 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="lineChooser">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
-          <FontInfo relative="true">
-            <Font component="lineChooser" property="font" relativeSize="true" size="-1"/>
-          </FontInfo>
-        </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
         </Property>
@@ -122,11 +116,6 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="arrowChooser">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
-          <FontInfo relative="true">
-            <Font component="arrowChooser" property="font" relativeSize="true" size="-1"/>
-          </FontInfo>
-        </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
         </Property>
