--- a/ContextUI/src/org/mongkie/ui/context/GroupsContextPanel.form
+++ b/ContextUI/src/org/mongkie/ui/context/GroupsContextPanel.form
@@ -31,8 +31,8 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Component id="groupsPiePanel" min="-2" pref="230" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="groupListScrollPane" pref="250" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="groupListScrollPane" pref="262" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -47,7 +47,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
-            <EmptyBorder bottom="10" left="50" right="50" top="0"/>
+            <EmptyBorder bottom="10" left="45" right="45" top="0"/>
           </Border>
         </Property>
       </Properties>
