--- a/ContextUI/src/org/mongkie/ui/context/VisibilityContextPanel.form
+++ b/ContextUI/src/org/mongkie/ui/context/VisibilityContextPanel.form
@@ -19,8 +19,8 @@
           <Group type="102" attributes="0">
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jXTitledSeparator1" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jXTitledSeparator2" alignment="0" max="32767" attributes="0"/>
+                  <Component id="nodesTitledSeparator" alignment="0" pref="251" max="32767" attributes="0"/>
+                  <Component id="edgesTitledSeparator" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -28,8 +28,8 @@
                           <Component id="edgesCountInfoLabel" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="nodesPiePanel" pref="235" max="32767" attributes="0"/>
-                  <Component id="edgesPiePanel" alignment="0" pref="235" max="32767" attributes="0"/>
+                  <Component id="nodesPiePanel" max="32767" attributes="0"/>
+                  <Component id="edgesPiePanel" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
@@ -39,30 +39,30 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jXTitledSeparator1" min="-2" max="-2" attributes="0"/>
+              <Component id="nodesTitledSeparator" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="nodesCountInfoLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="nodesPiePanel" min="-2" pref="150" max="-2" attributes="0"/>
+              <Component id="nodesPiePanel" min="-2" pref="140" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jXTitledSeparator2" min="-2" max="-2" attributes="0"/>
+              <Component id="edgesTitledSeparator" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="edgesCountInfoLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="edgesPiePanel" min="-2" pref="150" max="-2" attributes="0"/>
+              <Component id="edgesPiePanel" min="-2" pref="140" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="org.jdesktop.swingx.JXTitledSeparator" name="jXTitledSeparator1">
+    <Component class="org.jdesktop.swingx.JXTitledSeparator" name="nodesTitledSeparator">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="12" style="1"/>
+          <Font name="Tahoma" size="11" style="1"/>
         </Property>
         <Property name="title" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/mongkie/ui/context/Bundle.properties" key="VisibilityContextPanel.jXTitledSeparator1.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+          <ResourceString bundle="org/mongkie/ui/context/Bundle.properties" key="VisibilityContextPanel.nodesTitledSeparator.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
@@ -70,13 +70,13 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
     </Container>
-    <Component class="org.jdesktop.swingx.JXTitledSeparator" name="jXTitledSeparator2">
+    <Component class="org.jdesktop.swingx.JXTitledSeparator" name="edgesTitledSeparator">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="12" style="1"/>
+          <Font name="Tahoma" size="11" style="1"/>
         </Property>
         <Property name="title" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/mongkie/ui/context/Bundle.properties" key="VisibilityContextPanel.jXTitledSeparator2.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+          <ResourceString bundle="org/mongkie/ui/context/Bundle.properties" key="VisibilityContextPanel.edgesTitledSeparator.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
